Fix FNF Fix Duration Override Added optional command duration argument